tests/grammar/valid/v1_char_declaration_without_value.c
#include <stdint.h>
#include <stdio.h>

char c;
