tests/grammar/invalid/v5_invalid_array_declaration_multiline2.c
#include <stdint.h>
#include <stdio.h>

extern int
tab[5];